--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ deadpool = "^0.10"
 async-trait = "^0.1"
 tauri = { version = "1.5", features = ["shell-open", "http-api"] }
 serde = { version = "1.0", features = ["derive"] }
+
+[dev-dependencies]
+serde_json = "1.0.108"
