--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "deno.enable": true,
     "deno.lint": true,
-    "deno.unstable": false
+    "deno.unstable": true,
+    "deno.enablePaths": [
+        "./src-ts",
+        "./build.ts"
+    ],
 }
