--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
     "deno.enable": true,
     "deno.lint": true,
-    "deno.unstable": true,
+    "deno.unstable": false,
     "deno.enablePaths": [
         "./src-ts",
         "./build.ts"
-    ],
+    ]
 }
