--- a/examples/deno/src-tauri/Cargo.toml
+++ b/examples/deno/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tauri-plugin-cookie-fetch-example-vanilla"
+name = "tauri-plugin-cookie-fetch-example-deno"
 version = "0.0.0"
 description = "tauri-plugin-cookie-fetch example"
 authors = ["maemon4095"]
@@ -9,7 +9,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = ["shell-open"] }
+tauri = { version = "1", features = ["api-all"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-cookie-fetch = { path = "../../../" }
