--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ pigeonhole = { git = "https://github.com/maemon4095/pigeonhole-rs.git", branch =
 futures = "0.3"
 bytes = "1.5"
 thiserror = "1"
+rand = { version = "0.8", features = ["small_rng"] }
 
 [dev-dependencies]
 serde_json = "1.0"
