--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,6 @@
     "deno.lint": true,
     "deno.unstable": false,
     "deno.enablePaths": [
-        "./src-ts",
-        "./build.ts"
+        "./src-ts"
     ]
 }
