--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "tauri-plugin-cookie-fetch"
-version = "0.3.1"
+version = "0.4.0"
 description = "fetch with cookie"
 edition = "2021"
 build = "./build.rs"
+exclude = ["./examples"]
 
 [dependencies]
 reqwest = { version = "0.11", features = ["cookies"] }
@@ -13,6 +14,12 @@ async-trait = "0.1"
 tauri = { version = "1", features = ["shell-open", "http-api"] }
 serde = { version = "1", features = ["derive"] }
 bytes = "1.5"
+time = { version = "0.3", features = ["serde"] }
+tauri-plugin-bin-ipc = { git = "https://github.com/maemon4095/tauri-plugin-bin-ipc.git", branch = "release/v0.2.0" }
+cookie = "0.17"
+rmp-serde = "1.3"
+rmpv = { version = "1.3", features = ["with-serde"] }
+serde_with = "3.9"
 
 [dev-dependencies]
 serde_json = "1.0"
