--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ cookie = "0.17"
 rmp-serde = "1.3"
 rmpv = { version = "1.3", features = ["with-serde"] }
 serde_with = "3.9"
+glob = "0.3"
 
 [dev-dependencies]
 serde_json = "1.0"
